--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning how to learn</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="page">
         <header class="header">
-
+          <img src="images/logo.png" alt="..." class="logo_place_header">
+          <h1 class="header__title">Learning how to learn</h1>
         </header>
+
         <main class="content">
             <section class="description">
             </section>
-            
+
             <section class="digits">
             </section>
 
             <section class="feynman">
             </section>
-            
+
             <section class="kaufman">
             </section>
         </main>
+
         <footer class="footer">
 
         </footer>
