Finished header section
...

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <div class="page">
         <header class="header">
           <img src="images/logo.png" alt="..." class="logo_place_header">
-          <h1 class="header__title">Learning how to learn</h1>
+          <section>
+            <h1 class="header__title">Learning how to learn</h1>
+            <p class="header__subtitle">
+              The most effective, cutting-edge learning techniques that you can apply to your daily life
+            </p>
+            <a class="header__link" href="#">Learn more ➝</a>
+        </section>
+        <section>
+          <img src="images/on_the_edge.png" alt="..." class="header__main-illustration">
+          <div class="header__square-pic"></div>
+        </section>
         </header>
 
         <main class="content">
