--- a/index.html
+++ b/index.html
@@ -26,9 +26,69 @@
 
         <main class="content">
             <section class="description">
+              <div class="two-columns">
+                <p class="two-columns__brief">The main problem with education</p>
+                <div class="two-columns__main-text">
+                <p class="two-columns__paragraph">
+                  Whether it's at school or university,
+                  the one thing no one ever teaches you is how to teach yourself.
+                  All you actually do is memorize information in order to regurgitate when you take the test.
+                  You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around,
+                  do you truly understand the subject material? All you've really learned is how to pass that one test.
+                  Once that test is over, the information in your head has outlived its usefulness.
+                </p>
+                <p class="two-columns__paragraph">
+                  <b>Conclusion: </b>
+                  Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked.
+                  So, what can we do to remedy this?
+                </p>
+                <p class="two-columns__paragraph">
+                  There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging.
+                  This is exactly what we do at Practicum.
+                </p>
+                </div>
+
+              </div>
             </section>
 
             <section class="digits">
+              <h1 class="digits__title">Facts and figures</h1>
+              <h2 class="digits__subtitle">On learning and the brain</h2>
+              <section class="table">
+                <section class="table__cell">
+                  <h1 class="table__heading">86 billion</h1>
+                  <p class="table__text">The number of neurons in the human brain</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">2.1 billion</h1>
+                  <p class="table__text">The number of adults with low reading proficiency - World Bank, 2017</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">1,000 terabytes</h1>
+                  <p class="table__text">Human information storage capacity</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">500 trillion</h1>
+                  <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">420 million</h1>
+                  <p class="table__text">The number of adults under 25 with insufficient education for finding employment
+                  World Bank, 2017</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">17 - 20 years old</h1>
+                  <p class="table__text">Peak learning age</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">1885</h1>
+                  <p class="table__text">Development of the forgetting curve</p>
+                </section>
+                <section class="table__cell">
+                  <h1 class="table__heading">1897</h1>
+                  <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
+                </section>
+              </section>
             </section>
 
             <section class="feynman">
