--- a/index.html
+++ b/index.html
@@ -47,51 +47,60 @@
                   This is exactly what we do at Practicum.
                 </p>
                 </div>
-
               </div>
             </section>
 
             <section class="digits">
-              <h1 class="digits__title">Facts and figures</h1>
-              <h2 class="digits__subtitle">On learning and the brain</h2>
-              <section class="table">
-                <section class="table__cell">
-                  <h1 class="table__heading">86 billion</h1>
-                  <p class="table__text">The number of neurons in the human brain</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">2.1 billion</h1>
-                  <p class="table__text">The number of adults with low reading proficiency - World Bank, 2017</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">1,000 terabytes</h1>
-                  <p class="table__text">Human information storage capacity</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">500 trillion</h1>
-                  <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">420 million</h1>
-                  <p class="table__text">The number of adults under 25 with insufficient education for finding employment
-                  World Bank, 2017</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">17 - 20 years old</h1>
-                  <p class="table__text">Peak learning age</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">1885</h1>
-                  <p class="table__text">Development of the forgetting curve</p>
-                </section>
-                <section class="table__cell">
-                  <h1 class="table__heading">1897</h1>
-                  <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
-                </section>
+              <h2 class="digits__title"><b>Facts and figures</b></h2>
+              <p class="digits__subtitle">On learning and the brain</p>
+              <table class="table">
+                <div class="table__top-row">
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>86 billion</b></h1>
+                    <p class="table__text">The number of neurons in the human brain</p>
+                  </section>
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>2.1 billion</b></h1>
+                    <p class="table__text">The number of adults with low reading proficiency</p>
+                      <p class="table__text">World Bank, 2017</p>
+                  </section>
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>1,000 terabytes</b></h1>
+                    <p class="table__text">Human information storage capacity</p>
+                  </section>
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>500 trillion</b></h1>
+                    <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
+                  </section>
+                </div>
+                <div class="table__bottom-row">
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>420 million</b></h1>
+                    <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+                    <p class="table__text">World Bank, 2017</p>
+                  </section>
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>17 - 20 years old</b></h1>
+                    <p class="table__text">Peak learning age</p>
+                  </section>
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>1885</b></h1>
+                    <p class="table__text">Development of the forgetting curve</p>
+                  </section>
+                  <section class="table__cell">
+                    <h1 class="table__heading"><b>1897</b></h1>
+                    <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
+                  </section>
+                </div>
               </section>
-            </section>
+            </table>
 
             <section class="feynman">
+              <img src="images/feynman.png" alt="..." class="feynman__image">
+              <h2 class="feynman__title"><b>The Feynman Technique</b></h2>
+              <h1 class="feynman__subtitle">Learn without forgetting.</h1>
+              <a href="#" class="feynman__more">More ➝</a>
+
             </section>
 
             <section class="kaufman">
