--- a/index.html
+++ b/index.html
@@ -7,109 +7,185 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
-          <img src="images/logo.png" alt="..." class="logo_place_header">
-          <section>
-            <h1 class="header__title">Learning how to learn</h1>
-            <p class="header__subtitle">
-              The most effective, cutting-edge learning techniques that you can apply to your daily life
-            </p>
-            <a class="header__link" href="#">Learn more ➝</a>
-        </section>
-        <section>
-          <img src="images/on_the_edge.png" alt="..." class="header__main-illustration">
+          <img src="images/logo.png" alt="logo" class="header__logo_top">
+          <h1 class="header__title">Learning how to learn</h1>
+          <p class="header__subtitle">
+            The most effective, cutting-edge learning techniques that you can apply to your daily life.
+          <a href="#" class="header__link">Learn more →</a>
+          </p>
           <div class="header__square-pic"></div>
-        </section>
+          <img src="images/on_the_edge.png" alt="on the edge" class="header__main-illustration">
+
         </header>
 
         <main class="content">
+
             <section class="description">
               <div class="two-columns">
-                <p class="two-columns__brief">The main problem with education</p>
+                <h2 class="two-columns__brief">The main problem with education</h2>
+
                 <div class="two-columns__main-text">
                 <p class="two-columns__paragraph">
-                  Whether it's at school or university,
-                  the one thing no one ever teaches you is how to teach yourself.
+                  Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself.
                   All you actually do is memorize information in order to regurgitate when you take the test.
                   You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around,
                   do you truly understand the subject material? All you've really learned is how to pass that one test.
                   Once that test is over, the information in your head has outlived its usefulness.
                 </p>
                 <p class="two-columns__paragraph">
-                  <b>Conclusion: </b>
-                  Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked.
-                  So, what can we do to remedy this?
+                  <span class="two-columns__span-accent">Conclusion:</span> Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?
                 </p>
                 <p class="two-columns__paragraph">
-                  There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging.
-                  This is exactly what we do at Practicum.
+                  There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.
                 </p>
                 </div>
               </div>
             </section>
 
             <section class="digits">
-              <h2 class="digits__title"><b>Facts and figures</b></h2>
-              <p class="digits__subtitle">On learning and the brain</p>
-              <table class="table">
-                <div class="table__top-row">
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>86 billion</b></h1>
-                    <p class="table__text">The number of neurons in the human brain</p>
-                  </section>
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>2.1 billion</b></h1>
-                    <p class="table__text">The number of adults with low reading proficiency</p>
-                      <p class="table__text">World Bank, 2017</p>
-                  </section>
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>1,000 terabytes</b></h1>
-                    <p class="table__text">Human information storage capacity</p>
-                  </section>
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>500 trillion</b></h1>
-                    <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
-                  </section>
-                </div>
-                <div class="table__bottom-row">
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>420 million</b></h1>
-                    <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
-                    <p class="table__text">World Bank, 2017</p>
-                  </section>
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>17 - 20 years old</b></h1>
-                    <p class="table__text">Peak learning age</p>
-                  </section>
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>1885</b></h1>
-                    <p class="table__text">Development of the forgetting curve</p>
-                  </section>
-                  <section class="table__cell">
-                    <h1 class="table__heading"><b>1897</b></h1>
-                    <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
-                  </section>
-                </div>
-              </section>
-            </table>
+              <h2 class="digits-title">Facts and figures</h2>
+              <p class="digits-subtitle">On learning and the brain</p>
+              <ul class="table">
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">86 billion</h3>
+                  <p class="table__text table_theme_light">The number of neurons in the human brain</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">2.1 billion</h3>
+                  <p class="table__text table_theme_light">The number of adults with low reading proficiency</p>
+                  <p class="table__text table_theme_light">World Bank, 2017</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">1,000 terabytes</h3>
+                  <p class="table__text table_theme_light">Human information storage capacity</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">500 trillion</h3>
+                  <p class="table__text table_theme_light">The number of nerve synapses responsible for learning in an adult human</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">420 million</h3>
+                  <p class="table__text table_theme_light">The number of adults under 25 with insufficient education for finding employment</p>
+                  <p class="table__text table_theme_light">World Bank, 2017</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">17 - 20 years old</h3>
+                  <p class="table__text table_theme_light">Peak learning age</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">1885</h3>
+                  <p class="table__text table_theme_light">Development of forgetting curve</p>
+                </li>
+                <li class="table__cell table_theme_light">
+                  <h3 class="table__heading table_theme_light">1897</h3>
+                  <p class="table__text table_theme_light">Publication of Ivan Pavlov's research on classical conditioning</p>
+                </li>
+              </ul>
+            </section>
 
             <section class="feynman">
-              <img src="images/feynman.png" alt="..." class="feynman__image">
-              <h2 class="feynman__title"><b>The Feynman Technique</b></h2>
-              <h1 class="feynman__subtitle">Learn without forgetting.</h1>
-              <a href="#" class="feynman__more">More ➝</a>
-
+              <img src="images/feynman.png" alt="feynman" class="feynman__image">
+              <h2 class="feynman__title">The Feynman Technique</h2>
+              <p class="feynman__subtitle">Learn without forgetting</p>
+              <a href="#" class="feynman__more">More →</a>
             </section>
 
             <section class="kaufman">
+              <img src="images/triangle.svg" alt="..." class="kaufman__triangle">
+              <h2 class="kaufman-title title_dark"><b>Ten principles of rapid skill acquisition</b></h2>
+              <p class="kaufman-subtitle title_dark">by Josh Kaufman</p>
+              <ul class="table table_theme_dark">
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">1</h3>
+                  <p class="table__text table_theme_dark">Choose a lovable project.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">2</h3>
+                  <p class="table__text table_theme_dark">Focus your energy on one skill at a time.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">3</h3>
+                  <p class="table__text table_theme_dark">Define your target performance level.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">4</h3>
+                  <p class="table__text table_theme_dark">Deconstruct the skill into sub-skills.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">5</h3>
+                  <p class="table__text table_theme_dark">Obtain critical tools.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">6</h3>
+                  <p class="table__text table_theme_dark">Eliminate barriers to practice.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">7</h3>
+                  <p class="table__text table_theme_dark">Make dedicated time for practice.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">8</h3>
+                  <p class="table__text table_theme_dark">Create fast feedback loops.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">9</h3>
+                  <p class="table__text table_theme_dark">Practice by the clock in short bursts.</p>
+                </li>
+                <li class="table__cell table_theme_dark">
+                  <h3 class="table__heading table_theme_dark">10</h3>
+                  <p class="table__text table_theme_dark">Emphasize quantity and speed.</p>
+                </li>
+              </ul>
             </section>
         </main>
 
         <footer class="footer">
-
+          <div class="footer__columns">
+            <ul class="footer__column footer__column_content_copyright">
+              <li>
+                <img src="images/logo_white.png" alt="logo" class="footer__logo">
+              </li>
+              <li>
+                <p class="footer__author">&#169; 2019. Marcos Hernandez</p>
+              </li>
+            </ul>
+            <ul class="footer__column footer__column_content_info">
+              <li>
+                <p class="footer__header">About Practicum by Yandex</p>
+              </li>
+              <li>
+                <p class="column-text">Homepage</p>
+              </li>
+              <li>
+                <p class="column-text">Concept</p>
+              </li>
+              <li>
+                <p class="column-text">Mentors</p>
+              </li>
+            </ul>
+            <ul class="footer__column footer__column_content_social">
+              <li>
+                <p class="footer__header">Social Media</p>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/YandexCom/" class="column-text_link">
+                  <img src="images/Facebook_white.svg" alt="Facebook" class="social-logo">
+                  Facebook
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/yandex/?hl=en" class="column-text_link">
+                  <img src="images/Instagram_white.svg" alt="Instagram" class="social-logo">
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
         </footer>
+
     </div>
 </body>
 </html>
