--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
     <div class="page">
         <header class="header">
-          <img src="images/logo.png" alt="logo" class="header__logo_top">
+          <img src="images/logo.png" alt="logo" class="logo logo_place_header">
           <h1 class="header__title">Learning how to learn</h1>
           <p class="header__subtitle">
             The most effective, cutting-edge learning techniques that you can apply to your daily life.
@@ -49,39 +49,39 @@
               <h2 class="digits-title">Facts and figures</h2>
               <p class="digits-subtitle">On learning and the brain</p>
               <ul class="table">
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">86 billion</h3>
-                  <p class="table__text table_theme_light">The number of neurons in the human brain</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">86 billion</h3>
+                  <p class="table__text_theme_light">The number of neurons in the human brain</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">2.1 billion</h3>
-                  <p class="table__text table_theme_light">The number of adults with low reading proficiency</p>
-                  <p class="table__text table_theme_light">World Bank, 2017</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">2.1 billion</h3>
+                  <p class="table__text_theme_light">The number of adults with low reading proficiency</p>
+                  <p class="table__text_theme_light">World Bank, 2017</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">1,000 terabytes</h3>
-                  <p class="table__text table_theme_light">Human information storage capacity</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">1,000 terabytes</h3>
+                  <p class="table__text_theme_light">Human information storage capacity</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">500 trillion</h3>
-                  <p class="table__text table_theme_light">The number of nerve synapses responsible for learning in an adult human</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">500 trillion</h3>
+                  <p class="table__text_theme_light">The number of nerve synapses responsible for learning in an adult human</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">420 million</h3>
-                  <p class="table__text table_theme_light">The number of adults under 25 with insufficient education for finding employment</p>
-                  <p class="table__text table_theme_light">World Bank, 2017</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">420 million</h3>
+                  <p class="table__text_theme_light">The number of adults under 25 with insufficient education for finding employment</p>
+                  <p class="table__text_theme_light">World Bank, 2017</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">17 - 20 years old</h3>
-                  <p class="table__text table_theme_light">Peak learning age</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">17 - 20 years old</h3>
+                  <p class="table__text_theme_light">Peak learning age</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">1885</h3>
-                  <p class="table__text table_theme_light">Development of forgetting curve</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">1885</h3>
+                  <p class="table__text_theme_light">Development of forgetting curve</p>
                 </li>
-                <li class="table__cell table_theme_light">
-                  <h3 class="table__heading table_theme_light">1897</h3>
-                  <p class="table__text table_theme_light">Publication of Ivan Pavlov's research on classical conditioning</p>
+                <li class="table__cell_theme_light">
+                  <h3 class="table__heading_theme_light">1897</h3>
+                  <p class="table__text_theme_light">Publication of Ivan Pavlov's research on classical conditioning</p>
                 </li>
               </ul>
             </section>
@@ -98,45 +98,45 @@
               <h2 class="kaufman-title title_dark"><b>Ten principles of rapid skill acquisition</b></h2>
               <p class="kaufman-subtitle title_dark">by Josh Kaufman</p>
               <ul class="table table_theme_dark">
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">1</h3>
-                  <p class="table__text table_theme_dark">Choose a lovable project.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">1</h3>
+                  <p class="table__text_theme_dark">Choose a lovable project.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">2</h3>
-                  <p class="table__text table_theme_dark">Focus your energy on one skill at a time.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">2</h3>
+                  <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">3</h3>
-                  <p class="table__text table_theme_dark">Define your target performance level.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">3</h3>
+                  <p class="table__text_theme_dark">Define your target performance level.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">4</h3>
-                  <p class="table__text table_theme_dark">Deconstruct the skill into sub-skills.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">4</h3>
+                  <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">5</h3>
-                  <p class="table__text table_theme_dark">Obtain critical tools.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">5</h3>
+                  <p class="table__text_theme_dark">Obtain critical tools.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">6</h3>
-                  <p class="table__text table_theme_dark">Eliminate barriers to practice.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">6</h3>
+                  <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">7</h3>
-                  <p class="table__text table_theme_dark">Make dedicated time for practice.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">7</h3>
+                  <p class="table__text_theme_dark">Make dedicated time for practice.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">8</h3>
-                  <p class="table__text table_theme_dark">Create fast feedback loops.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">8</h3>
+                  <p class="table__text_theme_dark">Create fast feedback loops.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">9</h3>
-                  <p class="table__text table_theme_dark">Practice by the clock in short bursts.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">9</h3>
+                  <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
                 </li>
-                <li class="table__cell table_theme_dark">
-                  <h3 class="table__heading table_theme_dark">10</h3>
-                  <p class="table__text table_theme_dark">Emphasize quantity and speed.</p>
+                <li class="table__cell_theme_dark">
+                  <h3 class="table__heading_theme_dark">10</h3>
+                  <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
                 </li>
               </ul>
             </section>
@@ -146,7 +146,7 @@
           <div class="footer__columns">
             <ul class="footer__column footer__column_content_copyright">
               <li>
-                <img src="images/logo_white.png" alt="logo" class="footer__logo">
+                <img src="images/logo_white.png" alt="logo" class="logo logo_place_footer">
               </li>
               <li>
                 <p class="footer__author">&#169; 2019. Marcos Hernandez</p>
