added alt text and links in resources section

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                 <p class="khan__quote-author">George Lucas</p>
                 <p class="khan__quote-author-subline">Filmmaker</p>
                 <div class="khan__book-container">
-                  <img src="./images/khan-book.png" alt="" class="khan__book-pic">
-                  <p class="khan__buy-link">Buy book →</p>
+                  <img src="./images/khan-book.png" alt="The Oneworld Schoolhouse" class="khan__book-pic">
+                  <a  href="https://www.amazon.com/One-World-Schoolhouse-Education-Reimagined/dp/1455508373" class="khan__buy-link">Buy book →</a>
                 </div>
               </div>
             </section>
@@ -236,10 +236,10 @@
               <h2 class="section-title">Useful Resources</h2>
               <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
               <div class="resources__logo-zone">
-                <img src="images/logo/resources-tedED.png" alt="TedED" class="resources__logo">
-                <img src="images/logo/resources-Medium.png" alt="Medium" class="resources__logo">
-                <img src="images/logo/resources-dezeen.png" alt="Dezeen" class="resources__logo">
-                <img src="images/logo/resources-goodreads.png" alt="Goodreads" class="resources__logo">
+                <a href="https://ed.ted.com/"><img src="images/logo/resources-tedED.png" alt="TedED" class="resources__logo"></a>
+                <a href="https://medium.com/"><img src="images/logo/resources-Medium.png" alt="Medium" class="resources__logo"></a>
+                <a href="https://www.dezeen.com/"><img src="images/logo/resources-dezeen.png" alt="Dezeen" class="resources__logo"></a>
+                <a href="https://www.goodreads.com/"><img src="images/logo/resources-goodreads.png" alt="Goodreads" class="resources__logo"></a>
               </div>
             </section>
         </main>
