--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             The most effective, cutting-edge learning techniques that you can apply to your daily life.
           <a href="#" class="header__link">Learn more →</a>
           </p>
-          <div class="header__square-pic"></div>
+          <div class="header__square-pic rotation"></div>
           <img src="images/on_the_edge.png" alt="on the edge" class="header__main-illustration">
         </header>
 
@@ -46,44 +46,44 @@
             <section class="techniques">
               <h2 class="section-title">Learning Techniques</h2>
               <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
-              <div class="cards">
-                <div class="cards__item">
+              <ul class="cards">
+                <li class="cards__item">
                   <img class="cards__image"src="./images/cards-attention.png" alt=".">
                   <h3 class="cards__title">Two ways of thinking</h3>
                   <p class="cards__description">
                     Deep understanding comes from being able to toggle back and forth between focused and defused thinking.
                   </p>
-                </div>
-                <div class="cards__item">
+                </li>
+                <li class="cards__item">
                   <img class="cards__image"src="./images/cards-recall.png" alt=".">
                   <h3 class="cards__title">Recall</h3>
                   <p class="cards__description">
                     Improving your ability to remember key bits of information helps to connect different parts of the brain.
                   </p>
-                </div>
-                <div class="cards__item">
+                </li>
+                <li class="cards__item">
                   <img class="cards__image"src="./images/cards-interliving.png" alt=".">
                   <h3 class="cards__title">Interleaving</h3>
                   <p class="cards__description">
                     When you learn multiple skills at the same time, they reinforce each other.
                   </p>
-                </div>
-                <div class="cards__item">
+                </li>
+                <li class="cards__item">
                   <img class="cards__image"src="./images/cards-question.png" alt=".">
                   <h3 class="cards__title">Questions</h3>
                   <p class="cards__description">
                     When listening to your teacher, think up a good question, something that you're really itching to know.
                   </p>
-                </div>
-                <div class="cards__item">
+                </li>
+                <li class="cards__item">
                   <img class="cards__image"src="./images/cards-competence.png" alt=".">
                   <h3 class="cards__title">Illusion of Competence</h3>
                   <p class="cards__description">
                     Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can you be truly certain you've understood something.
                   </p>
-                </div>
+                </li>
 
-              </div>
+              </ul>
             </section>
 
             <section class="video">
@@ -91,10 +91,10 @@
               <p class="section-subtitle">For lovers of procrastination</p>
               <div class="video__iframes">
                 <div class="video__iframe">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="video__iframe">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
             </section>
@@ -167,14 +167,14 @@
 
             <section class="khan">
               <div class="khan__container">
-                <h3 class="khan__author">Salman Khan</h3>
-                <h2 class="khan__title">The Oneworld Schoolhouse.</h2>
-                <p class="khan__quote">
+                <p class="khan__author">Salman Khan</p>
+                <p class="khan__title">The Oneworld Schoolhouse.</p>
+                <blockquote class="khan__quote">
                   Sal Khan's passion and innovation is transforming learning for millions of
                   students worldwide. The One World Schoolhouse is a must-read for all
                   who are committed to improving education so students everywhere can
                   gain the skills and knowledge to be successful in school, careers and life.
-                </p>
+                </blockquote>
                 <p class="khan__quote-author">George Lucas</p>
                 <p class="khan__quote-author-subline">Filmmaker</p>
                 <div class="khan__book-container">
@@ -185,7 +185,7 @@
             </section>
 
             <section class="kaufman">
-              <div class="kaufman__triangle"></div>
+              <div class="kaufman__triangle rotation"></div>
               <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
               <h3 class=" section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h3>
               <ul class="table table_theme_dark">
@@ -235,13 +235,14 @@
             <section class="resources">
               <h2 class="section-title">Useful Resources</h2>
               <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
-              <div class="resources__logo-zone">
-                <a href="https://ed.ted.com/"><img src="images/logo/resources-tedED.png" alt="TedED" class="resources__logo"></a>
-                <a href="https://medium.com/"><img src="images/logo/resources-Medium.png" alt="Medium" class="resources__logo"></a>
-                <a href="https://www.dezeen.com/"><img src="images/logo/resources-dezeen.png" alt="Dezeen" class="resources__logo"></a>
-                <a href="https://www.goodreads.com/"><img src="images/logo/resources-goodreads.png" alt="Goodreads" class="resources__logo"></a>
-              </div>
+              <ul class="resources__logo-zone">
+                <li><a href="https://ed.ted.com/"><img src="images/logo/resources-tedED.png" alt="TedED" class="resources__logo"></a></li>
+                <li><a href="https://medium.com/"><img src="images/logo/resources-Medium.png" alt="Medium" class="resources__logo"></a></li>
+                <li><a href="https://www.dezeen.com/"><img src="images/logo/resources-dezeen.png" alt="Dezeen" class="resources__logo"></a></li>
+                <li><a href="https://www.goodreads.com/"><img src="images/logo/resources-goodreads.png" alt="Goodreads" class="resources__logo"></a></li>
+              </ul>
             </section>
+
         </main>
 
         <footer class="footer">
@@ -250,23 +251,23 @@
               <img src="images/logo_white.png" alt="logo" class="logo logo_place_footer">
               <p class="footer__author">&#169; 2019. Marcos Hernandez</p>
             </div>
-            <div class="footer__column">
-              <p class="footer__header">About Practicum by Yandex</p>
-              <ul class="footer__column_content_info">
+            <div class="footer__column footer__column_content_info">
+              <p class="footer__column-heading">About Practicum by Yandex</p>
+              <ul class="footer__column-links">
                 <li>
-                  <a href="#" class="footer__column-links">Homepage</a>
+                  <a href="#" class="footer__column-link">Homepage</a>
                 </li>
                 <li>
-                  <a href="#" class="footer__column-links">Concept</a>
+                  <a href="#" class="footer__column-link">Concept</a>
                 </li>
                 <li>
-                  <a href="#" class="footer__column-links">Mentors</a>
+                  <a href="#" class="footer__column-link">Mentors</a>
                 </li>
               </ul>
             </div>
-            <div class="footer__column">
-              <p class="footer__header">Social Media</p>
-              <ul class="footer__column_content_social">
+            <div class="footer__column footer__column_content_social">
+              <p class="footer__column-heading">Social Media</p>
+              <ul class="footer__column-links">
                 <li>
                   <a href="https://www.facebook.com/YandexCom/" class="footer__social-link">
                     <img src="images/Facebook_white.svg" alt="Facebook" class="footer__social-icon">
