removed normalize link tag from index, fixed card__image, added alt tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning how to learn</title>
-    <link rel="stylesheet" href="vendor/normalize.css">
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="body">
@@ -48,35 +47,35 @@
               <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
               <ul class="cards">
                 <li class="cards__item">
-                  <img class="cards__image"src="./images/cards-attention.png" alt=".">
+                  <img class="cards__image" src="./images/cards-attention.png" alt="Two ways of thinking">
                   <h3 class="cards__title">Two ways of thinking</h3>
                   <p class="cards__description">
                     Deep understanding comes from being able to toggle back and forth between focused and defused thinking.
                   </p>
                 </li>
                 <li class="cards__item">
-                  <img class="cards__image"src="./images/cards-recall.png" alt=".">
+                  <img class="cards__image" src="./images/cards-recall.png" alt="Recall">
                   <h3 class="cards__title">Recall</h3>
                   <p class="cards__description">
                     Improving your ability to remember key bits of information helps to connect different parts of the brain.
                   </p>
                 </li>
                 <li class="cards__item">
-                  <img class="cards__image"src="./images/cards-interliving.png" alt=".">
+                  <img class="cards__image" src="./images/cards-interliving.png" alt="Interleaving">
                   <h3 class="cards__title">Interleaving</h3>
                   <p class="cards__description">
                     When you learn multiple skills at the same time, they reinforce each other.
                   </p>
                 </li>
                 <li class="cards__item">
-                  <img class="cards__image"src="./images/cards-question.png" alt=".">
+                  <img class="cards__image" src="./images/cards-question.png" alt="Questions">
                   <h3 class="cards__title">Questions</h3>
                   <p class="cards__description">
                     When listening to your teacher, think up a good question, something that you're really itching to know.
                   </p>
                 </li>
                 <li class="cards__item">
-                  <img class="cards__image"src="./images/cards-competence.png" alt=".">
+                  <img class="cards__image" src="./images/cards-competence.png" alt="Illusion of competence">
                   <h3 class="cards__title">Illusion of Competence</h3>
                   <p class="cards__description">
                     Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can you be truly certain you've understood something.
@@ -269,13 +268,13 @@
               <p class="footer__column-heading">Social Media</p>
               <ul class="footer__column-links">
                 <li>
-                  <a href="https://www.facebook.com/YandexCom/" class="footer__social-link">
+                  <a href="https://www.facebook.com/YandexCom/" class="footer__column-link">
                     <img src="images/Facebook_white.svg" alt="Facebook" class="footer__social-icon">
                     Facebook
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/yandex/?hl=en" class="footer__social-link">
+                  <a href="https://www.instagram.com/yandex/?hl=en" class="footer__column-link">
                     <img src="images/Instagram_white.svg" alt="Instagram" class="footer__social-icon">
                     Instagram
                   </a>
